fixing broken link

--- a/our_work/content-pfa.html
+++ b/our_work/content-pfa.html
@@ -18,7 +18,7 @@
 <br>
 <h1 class="content-text-header">Publications</h1>
 <ul>
-<li>Educational Outcomes for Preschool for All Participants in Redwood City School District - Update (2012) (<a href="/resources/publications/PFA_IssueBrief2012_final 9.24.12.pdf" class="link-no-underline">Issue Brief</a> & <a href="/resources/publications/PFA_Snapshot2012_final 9.24.12 lp.pdf" class="link-no-underline">Snapshot</a>)</li>
+<li>Educational Outcomes for Preschool for All Participants in Redwood City School District - Update (2012) (<a href="/resources/publications/PFA_IssueBrief2012_final 9.24.12.pdf" class="link-no-underline">Issue Brief</a> & <a href="/resources/publications/PFA_Snapshot2012_Final.pdf" class="link-no-underline">Snapshot</a>)</li>
 </ul>
 <ul>
 <li>Educational Outcomes for Preschool for All Participants in Redwood City School District (2011) (<a href="/resources/publications/JGC_IB_RWCPreschool2011.pdf" class="link-no-underline">Issue Brief</a> & <a href="/resources/publications/JGC_SS_RWCPreschool2011.pdf" class="link-no-underline">Snapshot</a>)</li>
