--- a/about_jgc/content-contact.html
+++ b/about_jgc/content-contact.html
@@ -1,4 +1,51 @@
     <div id="jgc-content">
+    <script>
+    //$(function () {
+      $("#email").keyup(function(event){
+        if(event.keyCode == 13){
+          $("#emailBtn").click();
+        }
+      });
+    //});
+
+    function validE(email) {
+      console.log("JBB" + email + "JBB");
+      var regex = /^([a-zA-Z0-9_\.\-\+])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
+      return regex.test(email);
+      //var filter = /^([\w-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([\w-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$/;
+      //return filter.test(email);
+    }
+
+    function signup() {
+      var email = $('#email');
+      if (validE(email.val())) {
+        email.replaceWith('<span>Thank you for joining the mailing list</span>');
+        $('#error').hide();
+        $('#emailBtn').hide();
+        //send leslie email
+        if ($.browser.msie && window.XDomainRequest) {
+        // Use Microsoft XDR
+          var xdr = new XDomainRequest();
+          xdr.open("get",'http://cs210net.stanford.edu/cgi-bin/jgc-mailer.cgi?email=' + email.val());
+          xdr.onload = function() {
+              // XDomainRequest doesn't provide responseXml, so if you need it:
+              var dom = new ActiveXObject("Microsoft.XMLDOM");
+              dom.async = false;
+              dom.loadXML(xdr.responseText);
+          };
+          xdr.send();
+        } else {
+          $.ajax({
+            type: 'POST',
+            url: 'http://cs210net.stanford.edu/cgi-bin/jgc-mailer.cgi',
+            data: { 'email': email.val() }
+          });
+        }          
+      } else {
+        $('#error').show();
+      }
+    }
+    </script>
 
       <div id="jgc-content-features">
 
@@ -10,7 +57,11 @@
 		505 Lasuen Mall<br>
 		Stanford, CA 94305-3083<br>
 		<br>
-		<span class="content-bold">E-mail:</span> <a href="mailto:gardnercenter@lists.stanford.edu">gardnercenter@lists.stanford.edu</a><br>
+                <input type=email size=30 autofocus id="email" placeholder="Join Mailing List">&nbsp;<input type=button id="emailBtn" value="Join" onclick="signup();"><br>
+
+                <span id="error" style="display: none;">Please enter a valid email.</span> 
+                <br>
+		<span class="content-bold">e-mail:</span> <a href="mailto:gardnercenter@lists.stanford.edu">gardnercenter@lists.stanford.edu</a><br>
 		<span class="content-bold">Phone:</span> (650) 723-3099 <br>
 		<span class="content-bold">Fax:</span>  (650) 736-7160<br>
 		<br>
