--- a/content-footer.html
+++ b/content-footer.html
@@ -4,6 +4,10 @@
                  <div class="footer_top">
                    <ul class="plugins">
                      <li class=plugin>
+                        <a title="Follow JGC on Facebook" href="http://www.facebook.com/gardnercenter">
+                          <img src="/images/index/fb_link.png"></a>
+                     </li>
+                     <li class=plugin>
                         <a title="Follow JGC on Twitter" href="http://www.twitter.com/gardnercenter">
                           <img src="/images/index/follow_on_twitter.png"></a>
                      </li>
