--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@ document.createElement("article" );
 					<p>
 						<ul class="news">
 					       	  <li><a class="link-homepage-feature" href="news/news.html">October 6, 2012<br>
-Standard of Excellence: How John W. Gardner Inspires a New Generation of Leadership </a></li>
+Standard of Excellence: How John W. Gardner Inspires a New Generation of Leadership </a><br>
+                                                    <a href="/about_jgc/contact.html">Sign up here</a>
+                                                  </li>
 
    
 
@@ -163,6 +165,10 @@ Standard of Excellence: How John W. Gardner Inspires a New Generation of Leaders
                  <footer>
                  <div class="footer_top">
                    <ul class="plugins">
+                     <li class=plugin>
+                        <a title="Follow JGC on Facebook" href="http://www.facebook.com/gardnercenter">
+                          <img src="/images/index/fb_link.png"></a>
+                     </li>
                      <li class=plugin>
                         <a title="Follow JGC on Twitter" href="http://www.twitter.com/gardnercenter">
                           <img src="/images/index/follow_on_twitter.png"></a>
