Updated mailing list messaging

--- a/about_jgc/content-contact.html
+++ b/about_jgc/content-contact.html
@@ -57,7 +57,7 @@
 		505 Lasuen Mall<br>
 		Stanford, CA 94305-3083<br>
 		<br>
-                <input type=email size=30 autofocus id="email" placeholder="Join Mailing List">&nbsp;<input type=button id="emailBtn" value="Join" onclick="signup();"><br>
+                <input type=email size=30 autofocus id="email" placeholder="Join Our Mailing List">&nbsp;<input type=button id="emailBtn" value="Join" onclick="signup();"><br>
 
                 <span id="error" style="display: none;">Please enter a valid email.</span> 
                 <br>
