--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@ document.createElement("article" );
 					<p>
 						<ul class="news">
 					       	  <li><a class="link-homepage-feature" href="news/news.html">October 6, 2012<br>
-Standard of Excellence: How John W. Gardner Inspires a New Generation of Leadership </a><br>
-                                                    <a href="/about_jgc/contact.html">Sign up here</a>
+Standard of Excellence: How John W. Gardner Inspires a New Generation of Leadership </a><br><br>
+                                                    <a href="/about_jgc/contact.html">Join Our Mailing List</a>
                                                   </li>
 
    
@@ -137,7 +137,7 @@ Standard of Excellence: How John W. Gardner Inspires a New Generation of Leaders
 
 
 						</ul>
-<br><br>
+<br>
                                         <a class="link-homepage-feature" href="/news/news.html">More Events >></a>
 
 					</p>
