--- a/content-footer.html
+++ b/content-footer.html
@@ -5,15 +5,15 @@
                    <ul class="plugins">
                      <li class=plugin>
                         <a title="Follow JGC on Facebook" href="http://www.facebook.com/gardnercenter">
-                          <img src="/images/index/fb_link.png"></a>
+                          <img src="/images/index/fb_f.jpg"></a>
                      </li>
                      <li class=plugin>
                         <a title="Follow JGC on Twitter" href="http://www.twitter.com/gardnercenter">
                           <img src="/images/index/follow_on_twitter.png"></a>
                      </li>
                      <li class=plugin>
-                        <a title="Offical JGC Blog" href="http://gardnercenter.wordpress.com">
-                          <img width="20px" src="/images/icons/wordpress-logo-32-blue.png"></a>
+                        <a title="Follow JGC on YouTube" href="http://www.youtube.com/user/stanforduniversity">
+                          <img src="/images/index/you_tube.png"></a>
                      </li>
                      <li class=plugin>
                         <g:plusone size="medium" annotation="none"></g:plusone>
