Moving mailing list ask into footer

--- a/about_jgc/content-contact.html
+++ b/about_jgc/content-contact.html
@@ -58,19 +58,23 @@
 		Stanford, CA 94305-3083<br>
 		<span class="content-bold">e-mail:</span> <a href="mailto:gardnercenter@lists.stanford.edu">gardnercenter@lists.stanford.edu</a><br>
 		<span class="content-bold">Phone:</span> (650) 723-3099 <br>
-		<span class="content-bold">Fax:</span>  (650) 736-7160<br>
+		<span class="content-bold">Fax:</span>  (650) 736-7160</a>
 		<br>
-		<h1 class="title-page-header-big"> Stay Informed </h1><br>
-                To receive announcements from the Gardner Center, please enter your email address<br>
-                <input type=email size=30 autofocus id="email" placeholder="Enter your email address">&nbsp;<input type=button id="emailBtn" value="Submit" onclick="signup();"><br>
-
-                <span id="error" style="display: none;">Please enter a valid email.</span> 
-                <br>
+		<br>
 		<a class="header-link" href="team.html">JGC Staff Directory</a>
 		<br>
 		<br>
 		<a class="header-link" href="directions.html">Directions & Parking</a>
 		<br>
+		<br>
+		<br>
+		<h1 class="title-page-header-big"> Stay Informed </h1><br>
+                To receive announcements from the Gardner Center, please enter your email address<br>
+                <input type=email size=30 autofocus id="email" placeholder="">&nbsp;<input type=button id="emailBtn" value="Submit" onclick="signup();"><br>
+
+                <span id="error" style="display: none;">Please enter a valid email.</span> 
+                <br>
+
 				
          </div>
        </div>
