--- a/content-footer.html
+++ b/content-footer.html
@@ -19,7 +19,8 @@
                    <ul class="piped_right">
                      <li class="footer"><a href="/about_jgc/contact.html" class="footer">Contact Us</a></li>
                      <li class="footer"><a href="#" class="footer">Jobs</a></li>
-                     <li class="footer"><a href="/about_jgc/mission.html" id="first" class="footer">About JGC</a></li>
+                     <li class="footer"><a href="/about_jgc/mission.html" class="footer">About JGC</a></li>
+                     <li class="footer"></a><a href="/about_jgc/contact.html" id="first" class="footer">Join Our Mailing List</a></li>
                    </ul>
                  </div>
                  
