--- a/index.html
+++ b/index.html
@@ -127,9 +127,8 @@ document.createElement("article" );
 				<div class="feature_text">
 					<p>
 						<ul class="news">
-					       	  <li><a class="link-homepage-feature" href="news/news.html">October 6, 2012<br>
-Standard of Excellence: How John W. Gardner Inspires a New Generation of Leadership </a><br><br>
-                                                    <a href="/about_jgc/contact.html">Join Our Mailing List</a>
+					       	  <li><a class="link-homepage-feature" href="news/news.html">January 9, 2013<br>
+How Kids Learn II </a><br><br>
                                                   </li>
 
    
@@ -181,7 +180,8 @@ Standard of Excellence: How John W. Gardner Inspires a New Generation of Leaders
                    <ul class="piped_right">
                      <li class="footer"><a href="/about_jgc/contact.html" class="footer">Contact Us</a></li>
                      <li class="footer"><a href="/about_jgc/jobs.html" class="footer">Jobs</a></li>
-                     <li class="footer"><a href="/about_jgc/mission.html" id="first" class="footer">About JGC</a></li>
+                     <li class="footer"><a href="/about_jgc/mission.html" class="footer">About JGC</a></li>
+                     <li class="footer"></a><a href="/about_jgc/contact.html" id="first" class="footer">Join Our Mailing List</a></li>
                    </ul>
                  </div>
                  
