--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ How Kids Learn II </a><br><br>
                    <ul class="plugins">
                      <li class=plugin>
                         <a title="Follow JGC on Facebook" href="http://www.facebook.com/gardnercenter">
-                          <img src="/images/index/fb_f.jpg"></a>
+                          <img src="/images/index/f_logo.jpg"></a>
                      </li>
                      <li class=plugin>
                         <a title="Follow JGC on Twitter" href="http://www.twitter.com/gardnercenter">
