kristin and ilana piece plus home page update

--- a/our_work/content-ece.html
+++ b/our_work/content-ece.html
@@ -28,11 +28,11 @@
     </div> <!--end right side box div-->
     </aside>
 
-<p>The Early Childhood and Community Schools Linkages Project addresses the lack of collaboration and continuity across Early Childhood Education (ECE) programs and elementary schools by linking ECE programs with Community Schools. Since 2009, three regions (Multnomah County, OR; Albuquerque, NM; and Tulsa, OK) have been developing models to demonstrate that community schools are effective vehicles for promoting continuity between ECE and elementary school.</p>
-
+<p>The Early Childhood and Community Schools Linkages Project seeks to foster improved collaboration and continuity across early childhood education (ECE) programs and elementary community schools. Since 2009, three regions (Multnomah County, OR; Albuquerque, NM; and Tulsa, OK) have been implementing a number of practices designed to create settings and systems that improve the experiences and outcomes of vulnerable children and families as they move through the transition between ECE settings and elementary community school settings.
 <br>
+<br>
+<p>The JGC serves as a research partner in the context of this effort. The three-year implementation study describes promising practices, preliminary outcomes, and a number of conditions that facilitate and hinder the building of smooth, effective, and sustainable linkages.</p>
 
-<p>The JGC conducts implementation research and helps build capacity among regional Linkages leaders and their colleagues. The three-year implementation study documents each region’s process in establishing ECE community schools linkages, with the goal of determining what conditions appear to facilitate and/or hinder the building of linkages.</p>
 
          </div>
 
