--- a/our_work/content-cris.html
+++ b/our_work/content-cris.html
@@ -24,6 +24,11 @@
 <ul>
 <li><a href="/our_work/cris/CRIS Toolkit - Interim Product - Nov 2011.pdf">College Readiness Indicator Systems Toolkit (Interim Product)</a></li>
 </ul>
+<br>
+<h1 class="content-text-header">Publications</h1>
+<ul>
+<li><a href="/our_work/cris/VUE35.pdf">Voices in Urban Education 35: College Readiness Indicator Systems: Building Effective Supports for Students</a></li>
+</ul>
     </div> <!--end right side box div-->
     </aside>
 
@@ -78,7 +83,7 @@
 <p>Each participating district is developing a unique scope of work tailored to its particular needs that will be directly linked to the development of the tri-level system of college readiness indicators.</p>
 <br>
  
-<p>For more information about the College Readiness Indicator Systems initiative, please contact Angela Ongoco at <a href="mailto:aongoco@stanford.edu"> aongoco@stanford.edu </a>or Mary Arkins Decasse at <a href="mailto:mary_arkins@brown.edu">mary_arkins@brown.edu</a>. </p>         </div>
+<p>For more information about the College Readiness Indicator Systems initiative, please contact Leslie Patron at <a href="mailto:lpatron@stanford.edu"> lpatron@stanford.edu. </a> </p>         </div>
 
 
 
