updated jquery, added event tracking

--- a/content-head.html
+++ b/content-head.html
@@ -30,6 +30,7 @@
  
   <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
   <script src="/js/libs/jquery-latest.min.js"></script>
+  <script src="/js/libs/jquery-event-tracking.js"></script>
   <script src="/js/libs/hoverIntent.js"></script>
   <script src="/js/libs/superfish.js"></script>
   <script type="text/javascript">
