--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ document.createElement("article" );
  
   <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
   <script src="js/libs/jquery-latest.min.js"></script>
+  <script src="js/libs/jquery-event-tracking.js"></script>
   <script src="js/libs/hoverIntent.js"></script>
   <script src="js/libs/superfish.js"></script>
   <script type="text/javascript">
