changes for week

--- a/about_jgc/content-jobs.html
+++ b/about_jgc/content-jobs.html
@@ -5,14 +5,21 @@
         <div class="jgc-content-feature-item-left">
         <h1 class="title-page-header-big">Jobs, Internships, and Volunteer Opportunities</h1>
 <br>
-<h1 class="content-text-header">Research Assistant</h1><br> 
-<p>The John W. Gardner Center for Youth and Their Communities (JGC) in the Stanford University School of Education is seeking a 50% research assistant for the 2012-13 academic year. The JGC works in deep partnership with communities to bridge the gap between research, practice, and policy by generating actionable research that seeks to inform both the community and the broader field about critical findings from our work.</p>
+<h1 class="content-text-header">Finance Manager</h1><br> 
+
+<p></p>We are seeking a Finance Manager to oversee grants, gifts, and operating funds. Reporting to the Executive Director, the Finance Manager oversees all aspects of JGC budgets and manages procedures pertaining to financial management and research administration.<br><br><a href="https://recruit.trovix.com/jobhostmaster/jobhost/ViewJobPostDetails.do?title=FINANCE+MANAGER%2c+STANFORD+UNIVERSITY%2c++JOHN+GARDNER+CENTER%2c+SCHOOL+OF+EDUCATION&jobPostId=74vr4g65qvejzl4jdasdz7snoe&accountId=de85ad313f8598db1c42b567a3df24a00497ba22&button=&action=viewDetails&tid=0207-s7djk2fen5duhezamj4iuqaw2g">Job Description</a>
 <br>
-<p>The RA will contribute to several JGC projects by conducting qualitative and some quantitative research in community settings. Research areas may include a focus on postsecondary educational experiences for community college students, promotion of healthy communities, and youth development and engagement among middle and high school students. Qualitative research will include interviews and focus groups with key community stakeholders (in schools and districts, in other community organizations) working on behalf of youth; focus groups with young people or their families; analysis and synthesis of findings; writing for various audiences. Quantitative research would include analysis survey or administrative data focused on students’ school experiences and academic-related outcomes. RAs will have opportunities to present research findings to agency and community leaders, contribute to written products including those intended for community partners and academic journal articles, and be part of the JGC community of staff and student researchers.</p>
+</ul>
 <br>
-<p>This position is for current Stanford University School of Education doctoral students only. Qualified candidates will have experience conducting qualitative and quantitative analysis, including experience with Nvivo or other qualitative software. Proficiency with quantitative analysis software such as SAS or Stata is preferred but not required. This is a full-year RAship.</p>
 <br>
-<p>Please send a resume and cover letter to Rebecca London at: rlondon@stanford.edu.
+<h1 class="content-text-header">Policy Analyst</h1><br> 
+
+<p></p>We are currently seeking a Policy Analyst to contribute significantly to JGC’s quantitative and qualitative research projects and related community engagement and dissemination activities, working as a member of several multi-disciplinary teams of JGC staff, and reporting to senior research staff.
+<br>
+<br>
+The Policy Analyst will provide technical support linking K-12 education data with other data sources, including assisting community partners in data exporting and database development, supporting performance measurement for school sites, conducting statistical analyses at the request of community partners, writing policy briefs, and presenting findings to partners on community youth development and related topics. In addition, the Policy Analyst will be a part of qualitative research projects involving data collection, coding, analysis, and writing reports and briefs.<br><br><a href="https://recruit.trovix.com/jobhostmaster/jobhost/ViewJobPostDetails.do?title=POLICY+ANALYST&jobPostId=ohd6tjgha5bi3d2gjdh5uijeih&accountId=de85ad313f8598db1c42b567a3df24a00497ba22&button=&action=viewDetails&tid=0207-s7djk2fen5duhezamj4iuqaw2g">Job Description</a>
+<br>
+<br>
 </p>
 <br>
 <br>
