--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -167,9 +167,9 @@
 	  <p><a href="mailto:kstokesguinan@stanford.edu">kstokesguinan@stanford.edu</a></p>
           <br>
 
-	  <a class="header-link" href="/about_jgc/team_bios/betsy.html">Betsy Williams</a>
+	  <a class="header-link" href="/about_jgc/team_bios/imeh.html">Imeh Williams</a>
 	  <p>Graduate Research Assistant</p>
-	  <p><a href="mailto:betsyw@stanford.edu">betsyw@stanford.edu</a></p>
+	  <p><a href="mailto:imehw@stanford.edu">imehw@stanford.edu</a></p>
           <br>
 
   	               </div>
