--- a/resources/content-issue-briefs.html
+++ b/resources/content-issue-briefs.html
@@ -7,6 +7,7 @@
 <br>
 <span class="content-bold">2012</span>
 <ul style="list-style: none;">
+<li><a href="/resources/publications/BTSMathPlacementPolicyIssueBrief2012.pdf" class="link-no-underline">Math Placement Acceleration Initiative at the City College of San Francisco Developed with San Francisco Unified School District</a></li>
 <li><a href="/resources/publications/PFA_IssueBrief2012_final 9.24.12.pdf" class="link-no-underline">Educational Outcomes for Preschool for All Participants in Redwood City School Districts—Update</a></li>
 <li><a href="/resources/publications/Absence_IB_final.pdf" class="link-no-underline">Truancy and Chronic Absence in Redwood City</a></li>
 <li><a href="/resources/publications/Motivation - Feb 2012.pdf"" class="link-no-underline">Caring and Motivating Middle School Classrooms</a></li>
