changes for week, in particular Ilanas report added

--- a/about_jgc/content-jobs.html
+++ b/about_jgc/content-jobs.html
@@ -7,7 +7,7 @@
 <br>
 <h1 class="content-text-header">Finance Manager</h1><br> 
 
-<p></p>We are seeking a Finance Manager to oversee grants, gifts, and operating funds. Reporting to the Executive Director, the Finance Manager oversees all aspects of JGC budgets and manages procedures pertaining to financial management and research administration.<br><br><a href="https://recruit.trovix.com/jobhostmaster/jobhost/ViewJobPostDetails.do?title=FINANCE+MANAGER%2c+STANFORD+UNIVERSITY%2c++JOHN+GARDNER+CENTER%2c+SCHOOL+OF+EDUCATION&jobPostId=74vr4g65qvejzl4jdasdz7snoe&accountId=de85ad313f8598db1c42b567a3df24a00497ba22&button=&action=viewDetails&tid=0207-s7djk2fen5duhezamj4iuqaw2g">Job Description</a>
+<p></p>We are seeking a Finance Manager to oversee grants, gifts, and operating funds. Reporting to the Executive Director, the Finance Manager oversees all aspects of JGC budgets and manages procedures pertaining to financial management and research administration.<br><br><a href="http://stanfordcareers.stanford.edu/job-search?action=viewDetails&accountId=de85ad313f8598db1c42b567a3df24a00497ba22&jobId=50297&jobSource=0">Job Description</a>
 <br>
 </ul>
 <br>
@@ -17,7 +17,7 @@
 <p></p>We are currently seeking a Policy Analyst to contribute significantly to JGC’s quantitative and qualitative research projects and related community engagement and dissemination activities, working as a member of several multi-disciplinary teams of JGC staff, and reporting to senior research staff.
 <br>
 <br>
-The Policy Analyst will provide technical support linking K-12 education data with other data sources, including assisting community partners in data exporting and database development, supporting performance measurement for school sites, conducting statistical analyses at the request of community partners, writing policy briefs, and presenting findings to partners on community youth development and related topics. In addition, the Policy Analyst will be a part of qualitative research projects involving data collection, coding, analysis, and writing reports and briefs.<br><br><a href="https://recruit.trovix.com/jobhostmaster/jobhost/ViewJobPostDetails.do?title=POLICY+ANALYST&jobPostId=ohd6tjgha5bi3d2gjdh5uijeih&accountId=de85ad313f8598db1c42b567a3df24a00497ba22&button=&action=viewDetails&tid=0207-s7djk2fen5duhezamj4iuqaw2g">Job Description</a>
+The Policy Analyst will provide technical support linking K-12 education data with other data sources, including assisting community partners in data exporting and database development, supporting performance measurement for school sites, conducting statistical analyses at the request of community partners, writing policy briefs, and presenting findings to partners on community youth development and related topics. In addition, the Policy Analyst will be a part of qualitative research projects involving data collection, coding, analysis, and writing reports and briefs.<br><br><a href="http://stanfordcareers.stanford.edu/job-search?action=viewDetails&accountId=de85ad313f8598db1c42b567a3df24a00497ba22&jobId=50296&jobSource=0">Job Description</a>
 <br>
 <br>
 </p>
