--- a/our_work/content-cydi.html
+++ b/our_work/content-cydi.html
@@ -80,6 +80,8 @@
 <br>
 <h1 class="content-text-header">Publications</h1>
 <ul>
+<li><a href="/resources/reports/Youth_Development_in_RWC_Full_Report.pdf">Positive Youth Development in Redwood City</a></li>
+<li><a href="/resources/reports/Youth_Development_in_RWC_Exec_Summary.pdf">Positive Youth Development in Redwood City: Executive Summary</a></li>
 <li><a href="/our_work/cydi/CYDI 120117 Overview - January 2012.pdf">CYDI Overview</a></li>
 <li><a href="/resources/reports/E. CYDI-PP 111014 CYDI Partner Survey Report.pdf">CYDI Partner Survey Report</a></li>
 <li><a href="/resources/publications/CYDI Strategic Plan - 2nd Edition.pdf">CYDI Strategic Plan</a></li>   
@@ -155,10 +157,7 @@ contribute. Towards that end, we have adopted the following set of overarching s
 
 <p>CYDI partners have many opportunities to be involved in a variety of activities through the year, including networking,
 
-professional growth and working in partnership with youth. For more information, contact María Fernández, Policy
-
-and Program Senior Manager at <a href="mailto: mafernandez@stanford.edu"> mafernandez@stanford.edu</a>.
-</p>
+professional growth and working in partnership with youth. 
 
 
 
