--- a/resources/content-reports.html
+++ b/resources/content-reports.html
@@ -7,6 +7,10 @@
 
 <h1 class="title-page-header-big">Reports</h1>
 <br>
+<a href="/resources/reports/Youth_Development_in_RWC_Full_Report.pdf">Positive Youth Development in Redwood City, October 2012</a><br>
+<br>
+<a href="/resources/reports/Youth_Development_in_RWC_Exec_Summary.pdf">Positive Youth Development in Redwood City: Executive Summary, October 2012</a><br>
+<br>
 <a href="/resources/reports/ECE_Linkages_Implementation_Study">Early Childhood Education Linkages Project: Implementation Study, October 2012</a><br> 
 <br>
 <a href="/resources/reports/Berkeley001_Phase2_CHS_6A_REPORT.pdf">Raising the Bar, Building Capacity: Driving Improvement in California's Continuation High Schools, May 2012</a><br> 
