--- a/our_work/content-prevention_partnership.html
+++ b/our_work/content-prevention_partnership.html
@@ -9,10 +9,17 @@
  <aside>
     <div class="right-side-box">
 
+
       <h1 class="content-text-header">Partner Organizations</h1>
 <ul>
 <li>Redwood City 2020</li>
+</ul>
+<br>
 
+<h1 class="content-text-header">Publications</h1>
+<ul>
+<li><a href="/resources/reports/Youth_Development_in_RWC_Full_Report.pdf">Positive Youth Development in Redwood City</a></li>
+<li><a href="/resources/reports/Youth_Development_in_RWC_Exec_Summary.pdf">Positive Youth Development in Redwood City: Executive Summary</a></li>
 </ul>
     
     </div> <!--end right side box div-->
