--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@ document.createElement("article" );
 				<div class="feature_text">
 					<p>
 						<ul class="news">
-					       	  <li><a class="link-homepage-feature" href="news/news.html">January 9, 2013<br>
-How Kids Learn II </a><br><br>
+					       	  <li><a class="link-homepage-feature" href="news/news.html">November 29, 2012 to December 1, 2012<br>
+2012 California School Board Association Annual Education Conference & Tradeshow </a><br><br>
                                                   </li>
 
    
