--- a/our_work/content-healthyschools.html
+++ b/our_work/content-healthyschools.html
@@ -17,7 +17,12 @@
 <li>Sequoia Health Care District</li>
 <li>Sequoia Union High School District</li>
 </ul>
-    
+<br>
+<h1 class="content-text-header">Publications</h1>
+<ul>
+<li>Healthy Schools Initiative: Implementation Study in Four San Mateo County School Districts(<a href="/resources/report/HealthySchoolsInitiativeReport_12.12.pdf" class="link-no-underline">Report</a> & <a href="/resources/reports/HealthySchoolsInitiative_ExecutiveSummary12.12.pdf"class="link-no-underline">Executive Summary</a>)</li>
+
+</ul>   
     </div> <!--end right side box div-->
     </aside>
 
