--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ document.createElement("article" );
 				</div>
 				<div class="feature_text">
 					<ul class="pdf">
+<li><a class="link-homepage-feature" href="/resources/publications/HealthySchoolsInitiativeReport12.12.pdf" class="link-no-underline">Healthy Schools Initiative: Implementation Study in Four San Mateo County School Districts</a></li>
 <li><a class="link-homepage-feature" href="http://www.annenberginstitute.org/VUE/vue35-gurantz">Building and Implementing a College Readiness Indicator System</a></li>
-<li><a class="link-homepage-feature" href="/resources/publications/PFA_IssueBrief2012_final 9.24.12.pdf" class="link-no-underline">Educational Outcomes for Preschool for All Participants</a></li>
 <li><a href="/resources/reports/Youth_Development_in_RWC_Full_Report.pdf" class="link-homepage-feature">Positive Youth Development in Redwood City</a></li> 					
 						
 						
@@ -127,8 +127,8 @@ document.createElement("article" );
 				<div class="feature_text">
 					<p>
 						<ul class="news">
-					       	  <li><a class="link-homepage-feature" href="news/news.html">November 29, 2012 to December 1, 2012<br>
-2012 California School Board Association Annual Education Conference & Tradeshow </a><br><br>
+					       	  <li><a class="link-homepage-feature" href="news/news.html">Friday, March 13, 2012<br>
+Driving Improvement in California's Continuation High Schools </a><br><br>
                                                   </li>
 
    
