--- a/resources/content-reports.html
+++ b/resources/content-reports.html
@@ -5,7 +5,10 @@
         <div class="jgc-content-feature-item-left">
       
 
-<h1 class="title-page-header-big">Reports</h1>
+<h1 class="title-page-header-big">Reports</h1><br>
+<a href="/resources/reports/HealthySchoolsInitiativeReport12.12.pdf">Healthy Schools Initiative: Implementation Study in Four San Mateo County School Districts, December 2012</a><br>
+<br>
+<a href="/resources/reports/HealthySchoolsInitiative_ExecutiveSummary12.12.pdf">Healthy Schools Initiative: Implementation Study in Four San Mateo County School Districts: Executive Summary, December 2012</a><br>
 <br>
 <a href="/resources/reports/Youth_Development_in_RWC_Full_Report.pdf">Positive Youth Development in Redwood City, October 2012</a><br>
 <br>
