last minute tweaks

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ document.createElement("article" );
 				</div>
 				<div class="feature_text">
 					<ul class="pdf">
-<li><a class="link-homepage-feature" href="/resources/publications/HealthySchoolsInitiativeReport12.12.pdf" class="link-no-underline">Healthy Schools Initiative: Implementation Study in Four San Mateo County School Districts</a></li>
+<li><a class="link-homepage-feature" href="/resources/reports/HealthySchoolsInitiativeReport12.12.pdf" class="link-no-underline">Healthy Schools Initiative: Implementation Study in Four San Mateo County School Districts</a></li>
 <li><a class="link-homepage-feature" href="http://www.annenberginstitute.org/VUE/vue35-gurantz">Building and Implementing a College Readiness Indicator System</a></li>
 <li><a href="/resources/reports/Youth_Development_in_RWC_Full_Report.pdf" class="link-homepage-feature">Positive Youth Development in Redwood City</a></li> 					
 						
@@ -109,8 +109,8 @@ document.createElement("article" );
 				<div class="feature_text">
 					<p>
 						&nbsp;<br>
-                                                <a class="link-homepage-feature" href="/news/okf.html">
-						JGC Partner Oakland Kids First Receives $25,000 Grant from Stanford Undergraduates
+                                                <a class="link-homepage-feature" href="http://ed.stanford.edu/news/standard-excellence-how-john-w-gardner-inspires-new-generation-leaders">
+						How John W. Gardner Inspires a New Generation of Leaders
                                                 </a>	
 					</p>
 					<p>
@@ -153,7 +153,7 @@ Driving Improvement in California's Continuation High Schools </a><br><br>
                                         &nbsp;<br>
 					<ul class="data">
 						<li><a class="link-homepage-feature" href="http://www.communityschools.org/resources/community_schools_evaluation_toolkit.aspx">Community Schools Evaluation Toolkit</a></li>
-						<li><a class="link-homepage-feature" href="http://jgcnet.stanford.edu">Map of EPA Youth Programs</a></li>
+						<li><a class="link-homepage-feature" href="http://permalink.fliqz.com/aspx/permalink.aspx?at=ecfdd4a7c70e496681c12ca6bd890d65&a=7c89bf5398ac4c49a016c936e4542736">Webinar about College Readiness Indicator Systems for Wallace Foundation Out-of-School Time Grantees</a></li>
 <li><a class="link-homepage-feature" href="http://jgc.stanford.edu/our_work/yell.html">Youth Engaged in Leadership and Learning (YELL)</a></li>
 					</ul>
 				</div>
