--- a/our_work/content-cris.html
+++ b/our_work/content-cris.html
@@ -22,6 +22,9 @@
 <br>
 <h1 class="content-text-header">Tools</h1>
 <ul>
+<li><a href="http://permalink.fliqz.com/aspx/permalink.aspx?at=ecfdd4a7c70e496681c12ca6bd890d65&a=7c89bf5398ac4c49a016c936e4542736">Webinar about College Readiness Indicator Systems for Wallace Out-of-School Time Grantees</a></li>
+</ul>
+<br>
 <li><a href="/our_work/cris/CRIS Toolkit - Interim Product - Nov 2011.pdf">College Readiness Indicator Systems Toolkit (Interim Product)</a></li>
 </ul>
 <br>
@@ -63,7 +66,7 @@
 <br>
 <p>Specifically the JGC supports districts by:<p>
 
- 
+ http://www.idealist.org/view/job/6W7SGTfN5Dw4/
 <br>
 <ul>
 <li> Synthesizing the latest research on indicators associated with the key domains of college readiness (academic preparedness, academic tenacity, and college knowledge) to create an empirically-based foundation for the work;</li>
