--- a/our_work/content-healthyschools.html
+++ b/our_work/content-healthyschools.html
@@ -11,16 +11,16 @@
 
       <h1 class="content-text-header">Partner Organizations</h1>
 <ul>
+<li>Sequoia Health Care District</li>
 <li>Belmont-Redwood Shores School District</li>
 <li>Redwood City School District</li>
 <li>San Carlos School District</li>
-<li>Sequoia Health Care District</li>
 <li>Sequoia Union High School District</li>
 </ul>
 <br>
 <h1 class="content-text-header">Publications</h1>
 <ul>
-<li>Healthy Schools Initiative: Implementation Study in Four San Mateo County School Districts(<a href="/resources/report/HealthySchoolsInitiativeReport_12.12.pdf" class="link-no-underline">Report</a> & <a href="/resources/reports/HealthySchoolsInitiative_ExecutiveSummary12.12.pdf"class="link-no-underline">Executive Summary</a>)</li>
+<li>Healthy Schools Initiative: Implementation Study in Four San Mateo County School Districts (<a href="/resources/reports/HealthySchoolsInitiativeReport12.12.pdf" class="link-no-underline">Report</a> & <a href="/resources/reports/HealthySchoolsInitiative_ExecutiveSummary12.12.pdf"class="link-no-underline">Executive Summary</a>)</li>
 
 </ul>   
     </div> <!--end right side box div-->
@@ -29,47 +29,25 @@
 
 <span class="content-bold">Overview</span>
 
-<p>The John W. Gardner Center for Youth and Their Communities (JGC) at Stanford University, in partnership with the Sequoia Healthcare District (SHD) and four local school districts, is conducting a three-year study of the Healthy Schools Initiative (HSI).  HSI seeks to improve student outcomes over the long term through increased coordination and access to health and wellness programming within districts and schools.  The study is currently in its second year; during the first year of the study, JGC worked with SHD to develop a logic model and conducted a needs assessment, mapping health and wellness programs in the four partner districts.  Years two and three of the study will focus on investigating the ways in which HSI implementation affects the coordination of health and wellness programs in schools and districts and how this, in turn, influences awareness and accessibility of programs and activities.  This study is a critical precursor to any future research on the ways that HSI influences individual student health outcomes.</p> 
+<p>
 
- <br>
-
-<span class="content-bold">Goals of the Study</span>
-
-<p>This qualitative study seeks to learn about how the Healthy Schools Initiative affects the coordination and accessibility of health and wellness programming in schools from multiple perspectives.  By engaging parents, students, and school and district staff, we will investigate the following research question:</p>
-<ul>
-<li>In what ways does the Healthy Schools Initiative affect the coordination and accessibility of health and wellness programs and activities at HSI schools? </li>
-</ul>
+<p>
 <br>
-<span class="content-bold">Study Activities</span>
-<p>With the support of each school district, JGC researchers will collect data through a series of interviews and focus groups at two schools in each of the four partner school districts in the winter of 2012 and 2013.  JGC will work closely with each District Wellness Coordinator to coordinate the following activities: <p>
+The John W. Gardner Center for Youth and Their Communities (JGC) at Stanford University, in partnership with the Sequoia Healthcare District (SHD) and four local school districts, is conducting a three-year study of the Healthy Schools Initiative (HSI). HSI seeks to improve student outcomes over the long term through increased coordination and access to health and wellness programming within districts and schools. During the first year of the study, JGC worked with SHD to develop a logic model and conducted a needs assessment, mapping health and wellness programs in the four partner districts. Years two and three of the study focus on investigating the ways in which HSI implementation affects the coordination of health and wellness programs in schools and districts and how this, in turn, influences awareness and accessibility of programs and activities. This study is a critical precursor to any future research on the ways that HSI influences individual student health outcomes.
 <br>
-
-<ol>
-<li>Individual Interviews</li>
-<ul>
-
-<li>Principal at each school site</li>
-
-<li>Classroom teachers at each school site</li>
-
-<li>Program staff at each school site</li>
-
-<li>Relevant administrative staff at each school district</li>
-
-</ul>
 <br>
-<li>Focus Groups</li> 
-<ul>
-<li>Parents at each school site</li>
-<li>Students at each high school site </li>
-<li>Wellness Committee members from each district </li>
-</ul>
-</ol>
- 
+<span class="content-bold">Qualitative Implementation Study of the Healthy Schools Initiative</span>
 <br>
-<span class="content-bold">Data Analysis and Reporting</span>
+<br>
+This study examines how the Healthy Schools Initiative affects the coordination and accessibility of health and wellness programming in schools from multiple perspectives. By engaging parents, students, and school and district staff, JGC researchers investigated the following research question:
+<br>
+<br>
+    In what ways does the Healthy Schools Initiative affect the coordination and accessibility of health and wellness programs and activities at HSI schools?
+<br>
+<br>
+Through nearly 100 interviews and focus groups in the four partner school districts, our analyses revealed that effective and purposeful coordination of health and wellness activities was associated with increased integration of health and wellness programs within and across schools and districts, reaching more students equitably and leveraging resources.  For more information on this and other findings from this report, click on the document links to the right.
+<p>
 
-<p>Qualitative data analysis will be conducted in spring/summer 2012 and 2013.  Interim findings will be shared with partners in fall 2012, with a final report and briefing in fall 2013. </p>
          </div>
 
    
