--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ document.createElement("article" );
                                                 </a>	
 					</p>
 					<p>
-					<a class="link-homepage-feature" href="/news/okf.html">Learn More >></a>	
+					<a class="link-homepage-feature" href="http://ed.stanford.edu/news/standard-excellence-how-john-w-gardner-inspires-new-generation-leaders">Learn More >></a>	
 					</p>
 				</div>
 			</div>
