--- a/about_jgc/content-jwg.html
+++ b/about_jgc/content-jwg.html
@@ -8,14 +8,96 @@
      	   <h1 class="title-page-header-big">John W. Gardner</h1>
 	   <br>
            <h1 class="content-text-header">The Man Behind Our Mission</h1>
-	   <p>John W. Gardner (1912-2002) was a renowned activist who promoted the common good and improved the lives of millions. As 	
-President Lyndon Johnson’s Secretary of Health, Education and Welfare, Gardner was actively involved in civil rights enforcement, led the creation of Medicare, and helped establish the public television network. More broadly, his work focused on the elimination of poverty and racial injustice.</p>
+<br>
+<i>"John Gardner stands as an exemplar of the power of one individual to have a positive
+impact on society," said Stanford President John Hennessy at the time of Gardner’s death in
+2002. "His life should remind all of us that education and public service can work together
+as a powerful force to improve the world in which we live. At Stanford, we are exceedingly
+fortunate and proud to have called him our colleague—his name and good works will
+continue to inspire students, staff, and faculty for years to come."</i>
+<br>
+<br>
+<p>John W. Gardner was born in Los Angeles on Oct. 8, 1912. He earned a bachelor's and a
+master's degree in psychology from Stanford in 1935 and 1936, respectively. In 1938, he
+received a doctorate from the University of California Berkeley.</p>
+<br>
+<p>Gardner began his working life teaching psychology at Connecticut College for Women. As
+the United States entered World War II, he was asked to head the Latin American section of
+the Foreign Broadcast Intelligence Service and, in 1943, he joined the Marine Corps. After
+the war ended, he joined the Carnegie Corporation, becoming its president in 1955. Gardner
+also was named head of the Carnegie Foundation for the Advancement of Teaching and,
+in that capacity, laid the groundwork for establishing the White House Fellows program in
+1964.</p>
+<br>
+<p>From the 1960s onward, John W. Gardner played a major role in civil rights enforcement,
+education reform and campaign finance reform. He was instrumental in the creation of
+Medicare, in establishing the public television network and supporting community volunteer
+service. In 1964, Gardner received the Presidential Medal of Freedom, the nation's highest
+civil honor. He founded Common Cause and headed the Urban Coalition, chaired numerous
+presidential task forces and commissions and mentored many public service organizations.</p>
+<br>
+<p>In 1965, President Lyndon B. Johnson appointed Gardner secretary of the Department of
+Health, Education and Welfare. As the engineer of Johnson's "Great Society" program, he
+played an important role in enforcing the 1964 Civil Rights Act, launching Medicare, passing
+the 1965 Elementary and Secondary Education Act and creating the Corporation for Public
+Broadcasting. At one point, Fortune magazine estimated that Gardner supervised programs
+that affected 195 million Americans.</p>
+<br>
+<p>In 1968, as opposition to the war in Vietnam increased and urban violence erupted at home,
+Gardner resigned from the Johnson Administration. A few weeks later, he became chairman
+of the Urban Coalition, an organization that brought together leaders from labor, industry
+and government to tackle the underlying problems that fueled riots in cities nationwide that
+year.</p>
+<br>
+<p>In 1970, Gardner founded Common Cause, a citizen's advocacy group that aimed to make
+political institutions more open and accountable. When the group sued President Richard
+Nixon's re-election campaign in 1972, Gardner was placed on Nixon's infamous "enemies
+list." In 1974, in the wake of the Watergate scandal, Common Cause was instrumental in
+gaining adoption of landmark legislation that placed limits on political contributions and
+instituted disclosure requirements for electoral campaigns.</p>
+<br>
+<p>In 1977, Gardner retired from Common Cause to become chairman of the Commission
+on White House Fellowships. Two years later, he co-founded Independent Sector, an
+organization that supported hundreds of non-profit groups nationwide.</p>
+<br>
+<p>In the fall of 2000, the John W. Gardner Center for Youth and Their Communities was
+established at Stanford, in honor of Gardner's lifetime of public service. Speaking at the
+Center’s opening, Gardner said the public had finally understood the importance of youth
+development. "If you want to train leaders you have to start early," he said. "If you want to
+keep kids out of prison you have to start early. But it isn't easily done." The center's mission
+is to conduct research, educate the public and persuade diverse groups such as schools,
+law enforcement and government to work together to seek more effective solutions to the
+problems facing youth.</p>
+<br>
+<p>"It's a simple, easily forgotten truth that we need one another," Gardner said in the PBS
+documentary <a class="link-underlined" href="http://www.pbs.org/johngardner/" target="_blank">John Gardner: Uncommon American.</a> "I sometimes think that history might
+easily say about this nation: ‘It was a great nation full of talented people with enormous
+energy who forgot that they needed one another.'" The documentary aired on the Public
+Broadcasting Service in the fall of 2001.</p> 
+<br>
+<p>Gardner wrote several books, including, Excellence: Can We Be Equal and Excellent Too?
+The 1961 book argued that the United States must strive for excellence and equality at
+every level of society. It caught the attention of President John F. Kennedy, who asked
+Gardner to edit his 1962 book, To Turn the Tide.</p>
+<br>
+<p>In 1964, Gardner wrote <a class="link-underlined" href="http://www.ssireview.org/book_reviews/entry/self-renewal_john_w_gardner" target="_blank">Self-Renewal: The Individual and the Innovative Society.</a> In
+this book, his most popular, Gardner reflected on individual renewal and the renewal of
+society. "Failure to face the realities of change brings heavy penalties," he said. "Individuals
+become imprisoned in their own rigidities. Great institutions deteriorate. Civilizations fall.
+Yet decay is not inevitable. There is also renewal."</p>
+<br>
+<p>In 1965, the Stanford Alumni Association honored Gardner with the Herbert Hoover
+Medal for Distinguished Service. He served on the Stanford Board of Trustees from 1968
+to 1982. As an undergraduate, Gardner set a number of Pacific Coast intercollegiate
+records in swimming and, in 1976, he was awarded the Distinguished Achievement Medal
+of the Stanford Athletic Board. In 1984, Stanford Associates awarded him the Degree
+of Uncommon Man, the university's highest honor. In 1989, Gardner was named the
+first Miriam and Peter Haas Centennial Professor in Public Service. In 1991, he delivered
+<a href="/docs/JWGCentennialCommencementSpeech.pdf">the keynote address</a> at Stanford’s centennial commencement
+ceremonies and, in October 2012, Stanford celebrated the centennial of his birth with <a class="link-underlined" href="http://www.youtube.com/watch?v=8tbvh8yCOaI" target="_blank">an event hosted by the Gardner Center</a>. Hewas a consulting professor in the School of Education at the time of his death.</p>
+
 <br>
 
-<h1 class="content-text-header">A Lifetime of Achievement</h1>
-<p>Gardner received his B.A. and M.A. in psychology from Stanford University, where he returned as a trustee and as a professor, and received his Ph.D. in Psychology from the University of California at Berkeley. A prolific writer, Gardner authored books on leadership and self-renewal, and wrote extensively on public service. He headed the Carnegie Corporation and the Urban Coalition, and went on to found <a class="link-underlined" href="http://www.commoncause.org" target="_blank">Common Cause</a> and to co-found the <a class="link-underlined" href="http://independentsector.org" target="_blank">Independent Sector</a>. In 1964, Gardner received the Presidential Medal of Freedom, the nation’s highest civil honor. In September 2000, Gardner lent his name and support to the John W. Gardner Center for Youth and Their Communities that incorporates his beliefs and values. When the Center opened, Gardner said the public had finally understood the importance of youth development broadly conceived.</p> 
-<br>
-<p>Gardner also founded two public service fellowships in his name at <a class="link-underlined" href="http://studentaffairs.stanford.edu/haas/fellowships/gardner" target="_blank">Stanford University</a> and the <a class="link-underlined" href="http://igs.berkeley.edu/programs/gardner/index.html" target="_blank">University of California at Berkeley</a> and prompted the creation of the <a class="link-underlined" href="http://www.whitehouse.gov/about/fellows" target="_blank">White House Fellowship</a>. Learn more about John W. Gardner by viewing the PBS documentary: <a class="link-underlined" href="http://www.pbs.org/johngardner/" target="_blank">"John Gardner: Uncommon American"</a>.</p>
 
          </div>
 
