--- a/index.html
+++ b/index.html
@@ -127,10 +127,17 @@ document.createElement("article" );
 				<div class="feature_text">
 					<p>
 						<ul class="news">
-					       	  <li><a class="link-homepage-feature" href="news/news.html">Friday, March 13, 2012<br>
+					       	  <li><a class="link-homepage-feature" href="news/news.html">Thursday, January 9, 2013<br>
+How Kids Learn II</a><br>
+                                                  </li>
+</span>
+				</div>
+				<div class="feature_text">
+					<p>
+						<ul class="news">
+					       	  <li><a class="link-homepage-feature" href="news/news.html">Friday, March 13, 2013<br>
 Driving Improvement in California's Continuation High Schools </a><br><br>
                                                   </li>
-
    
 
 
