Trying to grab Vera changes

--- a/content-menu-top.html
+++ b/content-menu-top.html
@@ -10,7 +10,8 @@
   <div id="container">
     <header>
     	<div id="navbar">
-    	  <a href="/"><img src="/images/2012FebTopLogoTrans3.png" /></a>
+    	  <!---<a href="/"><img src="/images/2012FebTopLogoTrans3.png" /></a>--->
+    	  <a href="/"><img src="/images/index/JGCTopLogo.png" /></a>
 
           <div id="cse" style="width: 200px; float: right; padding: 25px 15px 0px 15px;">Loading</div>
           <script src="http://www.google.com/jsapi" type="text/javascript"></script>
