--- a/our_work/content-okf.html
+++ b/our_work/content-okf.html
@@ -14,7 +14,12 @@
 
     <ul>
 <li>Oakland Kids First</li>
-</ul>
+</ul><br>
+
+<h1 class="content-text-header">Publications</h1>
+<ul>
+
+<li>Oakland Kids First: Peers Advising Students to Succeed Implementation Study (<a href="/resources/reports/OKF_Report_12.12.pdf">Report</a>)</li>
     </div> <!--end right side box div-->
     </aside>
 
