--- a/our_work/content-motivation.html
+++ b/our_work/content-motivation.html
@@ -17,6 +17,7 @@
 <br>
       <h1 class="content-text-header">Publications</h1>
 <ul>
+<li>Academic Demands and Student Achievement: A View from Middle School Classrooms in Redwood City, CA (<a href="/resources/publications/RCSDSurveyIB_1.14.13.pdf">Issue Brief</a>)</li
 
 <li>Caring and Motivating Middle School Classrooms (<a href="/resources/publications/Motivation - Feb 2012.pdf">Issue Brief</a>)</li>
 
