--- a/resources/content-issue-briefs.html
+++ b/resources/content-issue-briefs.html
@@ -5,6 +5,14 @@
         <div class="jgc-content-feature-item-left">
            <h1 class="title-page-header-big">Issue Briefs</h1>
 <br>
+<span class="content-bold">2013</span>
+<ul style="list-style: none;">
+<li><a href="/resources/publications/RCSDSurveyIB_1.14.13.pdf" class="link-no-underline">Academic Demands & Student Achievement: A View from Middle School Classrooms in Redwood City</a></li>
+
+</ul>
+
+<br>
+
 <span class="content-bold">2012</span>
 <ul style="list-style: none;">
 <li><a href="/resources/publications/BtSMathPlacementPolicyIssueBrief2012.pdf" class="link-no-underline">Math Placement Acceleration Initiative at the City College of San Francisco Developed with San Francisco Unified School District</a></li>
