--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ document.createElement("article" );
 				</div>
 				<div class="feature_text">
 					<ul class="pdf">
-<li><a class="link-homepage-feature" href="/resources/reports/HealthySchoolsInitiativeReport12.12.pdf" class="link-no-underline">Healthy Schools Initiative: Implementation Study in Four San Mateo County School Districts</a></li>
+<li><a class="link-homepage-feature" href="/resources/publications/RCSDSurveyIB_1.14.13.pdf" class="link-no-underline">Academic Demands & Student Achievement: A View from Middle School Classrooms in Redwood City</a></li>
 <li><a class="link-homepage-feature" href="http://www.annenberginstitute.org/VUE/vue35-gurantz">Building and Implementing a College Readiness Indicator System</a></li>
 <li><a href="/resources/reports/Youth_Development_in_RWC_Full_Report.pdf" class="link-homepage-feature">Positive Youth Development in Redwood City</a></li> 					
 						
@@ -127,10 +127,11 @@ document.createElement("article" );
 				</div>
 				<div class="feature_text">
 					<p>
-						<ul class="news">
-					       	  <li><a class="link-homepage-feature" href="news/news.html">Friday, March 13, 2013<br>
-Driving Improvement in California's Continuation High Schools </a><br><br>
+<ul class="news">
+					       	  <li><a class="link-homepage-feature" href="news/news.html">Monday, January 21, 2013<br>
+Fulfilling the Dream: Hopeful for Tomorrow</a><br><br>
                                                   </li>
+						
    
 
 
