--- a/resources/content-issue-briefs.html
+++ b/resources/content-issue-briefs.html
@@ -7,7 +7,7 @@
 <br>
 <span class="content-bold">2013</span>
 <ul style="list-style: none;">
-<li><a href="/resources/publications/RCSDSurveyIB_1.14.13.pdf" class="link-no-underline">Academic Demands & Student Achievement: A View from Middle School Classrooms in Redwood City</a></li>
+<li><a href="/resources/publications/RCSDSurveyIssueBriefFinal11413.pdf" class="link-no-underline">Academic Demands & Student Achievement: A View from Middle School Classrooms in Redwood City</a></li>
 
 </ul>
 
