add new page and menu item

--- a/about_jgc/content-jobs.html
+++ b/about_jgc/content-jobs.html
@@ -6,12 +6,7 @@
         <h1 class="title-page-header-big">Jobs, Internships, and Volunteer Opportunities</h1>
 
 <br>
-<h1 class="content-text-header">Policy Analyst</h1><br> 
-
-<p></p>We are currently seeking a Policy Analyst to contribute significantly to JGC’s quantitative and qualitative research projects and related community engagement and dissemination activities, working as a member of several multi-disciplinary teams of JGC staff, and reporting to senior research staff.
-<br>
-<br>
-The Policy Analyst will provide technical support linking K-12 education data with other data sources, including assisting community partners in data exporting and database development, supporting performance measurement for school sites, conducting statistical analyses at the request of community partners, writing policy briefs, and presenting findings to partners on community youth development and related topics. In addition, the Policy Analyst will be a part of qualitative research projects involving data collection, coding, analysis, and writing reports and briefs.<br><br><a href="http://stanfordcareers.stanford.edu/job-search?action=viewDetails&accountId=de85ad313f8598db1c42b567a3df24a00497ba22&jobId=50296&jobSource=0">Job Description</a>
+<i>Thank you for your interest. We have no open positions at this time.</i> 
 <br>
 <br>
 </p>
