--- a/content-menu-top.html
+++ b/content-menu-top.html
@@ -23,6 +23,9 @@
           <a href="#">About JGC</a>
           <ul>
             <li>
+              <a href="/about_jgc/welcome.html">Welcome</a>
+            </li>
+            <li>
               <a href="/about_jgc/mission.html">Mission & Principles</a>
             </li>
             <li>
