--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@ document.createElement("article" );
 				<div class="feature_text">
 					<p>
 <ul class="news">
-					       	  <li><a class="link-homepage-feature" href="news/news.html">Monday, January 21, 2013<br>
-Fulfilling the Dream: Hopeful for Tomorrow</a><br><br>
+					       	  <li><a class="link-homepage-feature" href="news/news.html">Wednesday, March 13, 2013<br>
+Driving Improvement in California's Continuation High Schools</a><br><br>
                                                   </li>
 						
-   
+
 
 
 
