JWG photos, edits and job listing update

--- a/about_jgc/content-jobs.html
+++ b/about_jgc/content-jobs.html
@@ -6,10 +6,8 @@
         <h1 class="title-page-header-big">Jobs, Internships, and Volunteer Opportunities</h1>
 
 <br>
-<i>Thank you for your interest. We have no open positions at this time.</i> 
 <br>
-<br>
-</p>
+<a class="link-underlined" href="http://recruit.trovix.com/jobhostmaster/jobhost/ViewJobPostDetails.do?title=SENIOR+COMMUNITY+ENGAGEMENT+ASSOCIATE&jobPostId=a337o42uvratdgdnqi5yorxe7e&accountId=de85ad313f8598db1c42b567a3df24a00497ba22&button=&action=viewDetails&tid=0207-fjaryeiw25gl5afdpew7ajuwng" target="_blank">Senior Community Engagement Associate</a>
 <br>
 <br>
 
