--- a/about_jgc/content-jwg.html
+++ b/about_jgc/content-jwg.html
@@ -21,6 +21,25 @@ continue to inspire students, staff, and faculty for years to come."</i>
 master's degree in psychology from Stanford in 1935 and 1936, respectively. In 1938, he
 received a doctorate from the University of California Berkeley.</p>
 <br>
+
+<!--photolarge for  302px width and larger-->
+<!--photosmall for  200px to 302px width-->
+<div class="photosmall">
+  <div class="photosmall">
+    <span class="citation">
+      "John W. Gardner Papers (SC0908). Department of Special Collections & University Archives, Stanford University Libraries, Stanford, Calif."
+    </span>
+    <!-- change the "#" below to the URL you want a user to go if they click the image-->
+    <a href="#" class="lightbox" titles="John W. Gardner">
+      <img class="photosmall" src="/images/jwgkids2.jpg" alt="John W. Gardner">
+    </a>
+  </div>
+</div>
+
+      
+<!--JBB end photo here -->
+
+
 <p>Gardner began his working life teaching psychology at Connecticut College for Women. As
 the United States entered World War II, he was asked to head the Latin American section of
 the Foreign Broadcast Intelligence Service and, in 1943, he joined the Marine Corps. After
