--- a/index.html
+++ b/index.html
@@ -132,7 +132,9 @@ document.createElement("article" );
 				<div class="feature_text">
 					<p>
 <ul class="news">
-					       	  <li><a class="link-homepage-feature" href="news/news.html">Wednesday, March 13, 2013<br>
+					       	 	  <li><a class="link-homepage-feature" href="news/news.html">February 24-26, 2013<br>
+Building a GradNation Summit 2013</a><br><br>
+                                                  </li>  <li><a class="link-homepage-feature" href="news/news.html"> March 13, 2013<br>
 Driving Improvement in California's Continuation High Schools</a><br><br>
                                                   </li>
 						
